# Depth-Anything-V2

./: .gitignore  convert_trt.py  convert_trt.sh  export_onnx.py  patch_for_trt82.py  requirements.txt  verify.py  verify_common.py
deployment/: CMakeLists.txt  build_engine.sh
deployment/cmake/: FindTensorRT.cmake
deployment/depth_camera/: CMakeLists.txt  main.cpp
deployment/depth_image/: CMakeLists.txt  main.cpp
deployment/depth_trt/: CMakeLists.txt
deployment/depth_trt/include/depth_trt/: engine.h  preprocess.h  types.h  visualize.h
deployment/depth_trt/src/: engine.cpp  preprocess.cpp  visualize.cpp
depth_anything_v2/: dinov2.py  dpt.py
docs/superpowers/plans/: 2026-07-16-tensorrt-deployment-plan.md
docs/superpowers/specs/: 2026-07-16-tensorrt-deployment-design.md
